DESH-110 Auto-Format Quarkend Code